[gd_scene load_steps=16 format=2]

[ext_resource path="res://art/base.png" type="Texture" id=1]
[ext_resource path="res://art/direction_indicator.png" type="Texture" id=2]
[ext_resource path="res://npc/npc_hurtbox.gd" type="Script" id=3]
[ext_resource path="res://npc/npc.gd" type="Script" id=4]
[ext_resource path="res://art/knight.png" type="Texture" id=5]
[ext_resource path="res://art/shadow.png" type="Texture" id=6]
[ext_resource path="res://npc/npc_state_machine.gd" type="Script" id=7]
[ext_resource path="res://npc/idleNPCstate.gd" type="Script" id=8]
[ext_resource path="res://npc/attackNPCstate.gd" type="Script" id=9]

[sub_resource type="Animation" id=1]
length = 1.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("center/character:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 30, 31, 32, 33, 34, 35, 36, 37, 38, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("center/hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 24 )

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="CircleShape2D" id=5]
radius = 58.7585

[sub_resource type="CircleShape2D" id=6]
radius = 47.2507

[node name="npc" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Heavy = SubResource( 1 )

[node name="debug_state" type="Label" parent="."]
margin_left = -39.0
margin_top = -48.0
margin_right = 38.0
margin_bottom = -34.0
text = "debug_state"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="npc_state_machine" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="idle" type="Node2D" parent="npc_state_machine"]
script = ExtResource( 8 )

[node name="attack" type="Node2D" parent="npc_state_machine"]
script = ExtResource( 9 )

[node name="base" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 1 )

[node name="shadow" type="Sprite" parent="base"]
show_behind_parent = true
z_index = -1
texture = ExtResource( 6 )

[node name="center" type="Position2D" parent="."]
z_index = 2

[node name="arrow" type="Sprite" parent="center"]
position = Vector2( 28.5, 0 )
z_index = -1
texture = ExtResource( 2 )

[node name="character" type="Sprite" parent="center"]
rotation = 1.5708
z_index = 1
texture = ExtResource( 5 )
vframes = 7
hframes = 10
frame = 10

[node name="hitbox" type="Area2D" parent="center"]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="center/hitbox"]
position = Vector2( 32, 0 )
scale = Vector2( 1.6397, 1.61566 )
shape = SubResource( 2 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 2.26809, 2.26809 )
shape = SubResource( 3 )

[node name="hurtbox" type="Area2D" parent="."]
scale = Vector2( 2.4835, 2.4835 )
collision_layer = 0
collision_mask = 2147483650
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource( 4 )

[node name="timers" type="Node2D" parent="."]

[node name="attack_timer" type="Timer" parent="timers"]
one_shot = true

[node name="cooldown_timer" type="Timer" parent="timers"]
one_shot = true

[node name="move_delay_timer" type="Timer" parent="timers"]
one_shot = true

[node name="knockback_timer" type="Timer" parent="timers"]
one_shot = true

[node name="standoff_distance" type="Area2D" parent="."]
collision_mask = 2147483648

[node name="CollisionShape2D" type="CollisionShape2D" parent="standoff_distance"]
shape = SubResource( 5 )

[node name="runaway_distance" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="runaway_distance"]
shape = SubResource( 6 )
[connection signal="area_entered" from="center/hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="npc_damage_taken" from="hurtbox" to="." method="_on_hurtbox_npc_damage_taken"]
[connection signal="timeout" from="timers/attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="timers/cooldown_timer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="timeout" from="timers/move_delay_timer" to="." method="_on_move_delay_timer_timeout"]
[connection signal="timeout" from="timers/knockback_timer" to="." method="_on_knockback_timer_timeout"]
[connection signal="area_entered" from="standoff_distance" to="." method="_on_standoff_distance_area_entered"]
[connection signal="area_exited" from="standoff_distance" to="." method="_on_standoff_distance_area_exited"]
[connection signal="area_entered" from="runaway_distance" to="." method="_on_runaway_distance_area_entered"]
[connection signal="area_exited" from="runaway_distance" to="." method="_on_runaway_distance_area_exited"]
